--- a/public/css/general.css
+++ b/public/css/general.css
@@ -6,7 +6,7 @@
 
 :root{
     --colorNegro: #202020;
-    --colorGrisClaro: #cbcbcb;
+    --colorGrisClaro: #d8d8d8;
     --colorGrisOscuro: #6b6b6b;
     --colorBlanco: #ffff;
     --tipografiaGeneral:'Roboto', sans-serif;
@@ -16,14 +16,14 @@
 body {
     font-family: var(--tipografiaGeneral);
     font-weight: 300;
-    margin: 50px;
+    margin: 0px;
     
 }
 
 h1 {
     font-family: var(--tipografiaGeneral);
     font-weight: 900;
-    font-size: 30px;
+    font-size: 2em;
     color: var(--colorNegro);
 }
 
@@ -45,7 +45,7 @@ a {
 h2 {
     font-family: var(--tipografiaGeneral);
     font-weight: 900;
-    font-size: 28px;
+    font-size: 1.5em;
     color: var(--colorNegro);
 
 }
@@ -53,7 +53,7 @@ h2 {
 h3 {
     font-family: var(--tipografiaGeneral);
     font-weight: 900;
-    font-size: 24px;
+    font-size: 1.2em;
     color: var(--colorNegro);
 
 }
@@ -61,14 +61,13 @@ h3 {
 h4 {
     font-family: var(--tipografiaGeneral);
     font-weight: 900;
-    font-size: 18px;
+    font-size: 1em;
     color: var(--colorNegro);
 }
 
 p{
     font-family: var(--tipografiaGeneral);
     font-weight: 400;
-    font-size: 16px;
+    font-size: 0.9em;
     color: var(--colorNegro);
-
 }
