--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 @import '/css/general.css';
-@import '/css/home.css';
+@import '/css/header.css';
+@import '/css/main.css';
+@import '/css/footer.css';
