--- a/views/home.html
+++ b/views/home.html
@@ -7,13 +7,13 @@
     <title>La Carta</title>
 </head>
 <body class="home">
-    <header class="home__header">
+    <header>
         <h1>Nuestro Restó</h1>
         <h2>Carta</h2>
     </header>
     
-    <main class="home__main">
-        <aside class="home__main__aside">
+    <main >
+        <aside>
             <nav>
                 <ul>
                     <li><a href="/">Entradas</a></li>
@@ -31,7 +31,7 @@
                 
             </nav>
         </aside>
-        <section class="home__main__section">
+        <section>
             <h3>Entradas</h3>
            <article>
                 <h4>Muzzarella Sticks</h4>
@@ -95,17 +95,19 @@
                 <h4>  Tapa de mollejas</h4>
                 <p> Mollejas con mango, ananá, jengibre, chiles y pochoclo.</p>
             </article>
-
-            <p><a href="#">Volver arriba</a></p>
+            <div>
+                <a href="#">Volver arriba</a>
+            </div>
         </section>
         <div>
-            <img src="/img/foto-entradas.jpg" alt="">
+            <img class="foto_producto" src="/img/foto-entradas.jpg" alt="">
         </div>
     </main>
 
     <footer>
-        <img src="/img/logo-web.png" alt="logo" width="300">
+        <img src="/img/logo-web.png" alt="logo">
         <nav>
+            <h4>Contacto</h4>
             <ul>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
