--- a/views/postres.html
+++ b/views/postres.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>La Carta</title>
 </head>
 <body>
@@ -10,24 +11,24 @@
         <h1>Nuestro Restó</h1>
         <h2>Carta</h2>
     </header>
-    <aside>
-        <nav>
-            <ul>
-                <li><a href="/">Entradas</a></li>
-                <li><a href="/principal">Platos principales</a></li>
-                <li>Ensaladas</li>
-                <li>Raws</li>
-                <li><a href="/postres">Postres</a></li>
-                <li>Desayunos y Meriendas</li>
-                <li>Bebidas</li>
-                <li>Smoothies</li>
-                <li>Té y café</li>
-                <li>Vinos</li>
-                <li>Cervezas</li>
-            </ul>
-        </nav>
-    </aside>
     <main>
+        <aside>
+            <nav>
+                <ul>
+                    <li><a href="/">Entradas</a></li>
+                    <li><a href="/principal">Platos principales</a></li>
+                    <li>Ensaladas</li>
+                    <li>Raws</li>
+                    <li><a href="/postres">Postres</a></li>
+                    <li>Desayunos y Meriendas</li>
+                    <li>Bebidas</li>
+                    <li>Smoothies</li>
+                    <li>Té y café</li>
+                    <li>Vinos</li>
+                    <li>Cervezas</li>
+                </ul>
+             </nav>
+        </aside>
         <section>
             <h3>Postres</h3>
            <article>
@@ -43,9 +44,7 @@
                 <h4>Fondue de chocolate</h4>
                 <p>Con frutas frescas fileteadas.</p>
            </article>
-
-            <img src="/img/foto-postre.jpg" alt="">
-
+    
            <article>
                 <h4>Crocante de Banana y Nutella</h4>
            </article>
@@ -59,15 +58,20 @@
            <article>
                 <h4>Cheesecake</h4>
             </article>
-
-            <p><a href="#">Volver arriba</a></p>
+            <div>
+                <a href="#">Volver arriba</a>
+            </div>
         </section>
+        <div>
+            <img class="foto_producto" src="/img/foto-postre.jpg" alt="">
+        </div>
             
     </main>
 
     <footer>
-        <img src="/img/logo-web.png" alt="logo" width="300">
+        <img src="/img/logo-web.png" alt="logo">
         <nav>
+            <h4>Contacto</h4>
             <ul>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
