--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,10 @@
 header{
-    box-shadow: 0px 1px 0px 0px rgba(143, 143, 143);
+    border-bottom: 1px solid  var(--colorGrisOscuro);
     margin: 50px 50px 30px;
     padding: 0px 0px 20px;
+}
+@media(min-width: 424px){
+    header{
+        margin: 50px 50px 0px;
+    }
 }
