fix: @media max-width 768px

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,7 @@ main {
     color: var(--colorNegro);
   }
   
-@media(min-width: 424px){
+@media(max-width: 768px){
 
     main {
       display: flex;
