--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,7 +3,7 @@ header{
     margin: 50px 50px 30px;
     padding: 0px 0px 20px;
 }
-@media(min-width: 424px){
+@media(max-width: 768px){
     header{
         margin: 50px 50px 0px;
     }
