changed structure of css

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,29 +1,30 @@
+/* MOBILE */
 footer{
     background-color: var(--colorGrisClaro);
     width: 100%;
-    display: flex;
-    flex-direction: row;    
-    padding: 30px;
-    
+    padding: 20px 0px 50px;
 }
 
-footer img{
-    text-align: left;
-    width: 200px;
-    margin: 0px auto 0px 0px;
 
+footer figure {
+    margin: 20px 50px;
 }
 
 footer nav{
-    text-align: right;
-    margin: 0 ;
+    width: 100%;
 }
 
-footer h4{
+footer nav h4{
     color: var(--colorBlanco);
     font-weight: 700;
-    margin: 0px 0px 10px;
-    
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+footer nav ul{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 footer a{
@@ -31,3 +32,43 @@ footer a{
     font-weight: 700;
     
 }
+
+
+
+
+@media(min-width:768px){
+    footer{
+        background-color: var(--colorGrisClaro);
+        width: 100%;
+        display: flex;
+        flex-direction: row;    
+        padding: 30px;
+        
+    }
+    
+    footer figure {
+        text-align: left;
+        width: 200px;
+        margin: 0px auto 0px 0px;
+    
+    }
+    
+    footer nav{
+        text-align: right;
+        margin: 0 ;
+    }
+    
+    footer nav h4{
+        text-align: right;
+        
+    }
+    footer nav ul{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+
+}
+
+
