--- a/views/home.html
+++ b/views/home.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>La Carta</title>
 </head>
-<body class="home">
+<body>
     <header>
-        <h1>Nuestro Restó</h1>
-        <h2>Carta</h2>
+        <h1 class="title">Nuestro Restó</h1>
+        <h2 class="subtitle">Carta</h2>
     </header>
     
     <main >
@@ -95,17 +95,19 @@
                 <h4>  Tapa de mollejas</h4>
                 <p> Mollejas con mango, ananá, jengibre, chiles y pochoclo.</p>
             </article>
-            <div>
+            <div class="link-volver">
                 <a href="#">Volver arriba</a>
             </div>
         </section>
-        <div>
+        <figure>
             <img class="foto_producto" src="/img/foto-entradas.jpg" alt="">
-        </div>
+        </figure>
     </main>
 
     <footer>
-        <img src="/img/logo-web.png" alt="logo">
+        <figure>
+            <img src="/img/logo-web.png" alt="logo">
+        </figure>
         <nav>
             <h4>Contacto</h4>
             <ul>
