--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,10 +1,41 @@
+
+
+/* MOBILE */
 header{
     border-bottom: 1px solid  var(--colorGrisOscuro);
-    margin: 50px 50px 30px;
-    padding: 0px 0px 20px;
+    margin-top: 50px;
+    padding-bottom: 20px;
 }
-@media(max-width: 768px){
+
+header h1.title{
+    text-align: center;
+}
+
+header h2.subtitle{
+    text-align: center;
+}
+
+ 
+/* DESKTOP */
+@media(min-width:768px){
     header{
-        margin: 50px 50px 0px;
+        border-bottom: 1px solid  var(--colorGrisOscuro);
+        margin: 50px 50px 30px;
+        padding: 0px 0px 20px;
     }
+    
+    
+    header h1.title{
+        text-align: left;
+    }
+
+    header h2.subtitle{
+        text-align: left;
 }
+
+
+
+
+
+}
+
